--- a/homework-04/styles/styles.css
+++ b/homework-04/styles/styles.css
@@ -87,7 +87,7 @@ body {
 }
 .prise {
     float: right; 
-    background: rgb(255,255,255,.4);
+    background: rgba(255,255,255,.4);
     height: 32px;
     width: 46px;
     padding-top: 10px;
