--- a/homework-08/css/tablet.css
+++ b/homework-08/css/tablet.css
@@ -41,6 +41,7 @@
         width: 60%;
         margin: 0 auto;
         margin-bottom: 20px;
+        align-items: flex-start;
     }
     .karta {
         order: 0;
