--- a/homework-08/css/mobile.css
+++ b/homework-08/css/mobile.css
@@ -13,7 +13,7 @@
         background-position: center;
         background-repeat: no-repeat;
         width: 100%;
-        height: 100vh;
+        height: 540px;
         margin-bottom: 70px;
     }
     header {
